@@ -1,0 +1,16 @@
+* Requirements *
+ - OCaml with version >= 4.02.0 + ocamlbuild.
+   For easier installation, it is advised to install opam  first (OCaml Package Manager), see
+
+
+* Tools will be installed in PREFIX/bin, and various files in PREFIX/share/herdtools7.
+  By default (see Makefile) PREFIX is $HOME. You can change PREFIX by editing the Makefile,
+  or by running make as make PREFIX=yourprefix
+
+* Build: 
+% make all
+
+* Install:
+% make install
+
+
