@@ -1,3 +1,4 @@
+ * gen: avoid pseudo-instruction li in generated tests.
  * tools: option -alloc <bool> for mprog [allocate symbolic registers].
  * herd: the match constructs also applies to relation.
  * Correct libdir definition for gen: same as herd, as it may parse bell
